--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ nav .container .nav-links {
 }
 
 nav .container .nav-links a {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   color: var(--color-white);
   transition: var(--transition);
   font-weight: 400;
@@ -139,16 +139,16 @@ nav .container .nav-links a:nth-child(1) {
 }
 
 /* ======== Sell Rebon Section =======*/
-nav .sell-rebon {
-  width: 100%;
+body .sell-rebon {
+  width: 100vw;
   background-color: var(--color-danger);
   position: absolute;
-  bottom: 1;
+  top: 5.8rem;
   left: 0;
   margin-top: 0.6rem;
 }
 
-nav .sell-rebon p {
+body .sell-rebon p {
   padding: 0.4rem 0;
   text-align: center;
   font-size: 1.2rem;
@@ -156,7 +156,7 @@ nav .sell-rebon p {
   font-weight: 300;
 }
 
-nav .sell-rebon p span {
+body .sell-rebon p span {
   font-weight: 400;
   color: var(--color-black);
 }
@@ -583,6 +583,7 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
 }
 
 footer h2 {
