--- a/style.css
+++ b/style.css
@@ -1,24 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 :root {
-  --color-bg: #f7eeee;
-  --color-primary: #5f5f5fcc;
-  --color-secondary: #ccecff;
-  --color-danger: rgb(231, 60, 60);
+  --color-bg: #ebf8ff;
+  --color-primary: rgb(231, 60, 60);
+  --color-secondary: #000000;
   --color-dark: #1a273b;
-  --color-black: #000000;
   --color-white: #fff;
-  --color-light: #f0eef6;
   --color-gray: #98a4b3;
 
   --btn-padding: 1rem 3rem;
   --section-distance: 15rem;
-
-  --border-radius: 2rem;
   --card-border-radius: 1rem;
   --card-padding: 1rem;
-
-  --search-padding: 0.5rem 1rem;
 
   --transition: all 0.3s linear;
 }
@@ -61,11 +54,11 @@ img {
   display: block;
   padding: var(--btn-padding);
   background-color: transparent;
-  border: 4px solid var(--color-danger);
+  border: 4px solid var(--color-primary);
   font-weight: 500;
   font-size: 2rem;
   font-family: inherit;
-  color: var(--color-danger);
+  color: var(--color-primary);
   transition: var(--transition);
 }
 
@@ -76,15 +69,15 @@ img {
 }
 
 .btn-primary {
-  border: 4px solid var(--color-black);
-  color: var(--color-black);
+  border: 4px solid var(--color-secondary);
+  color: var(--color-secondary);
   padding: 0.3rem 1rem;
 }
 
 /* =====================NAV BAR==================== */
 nav {
   width: 100vw;
-  background-color: var(--color-black);
+  background-color: var(--color-secondary);
   position: fixed;
   top: 0;
   left: 0;
@@ -110,7 +103,7 @@ nav .container .nav-logo h2 {
   font-size: 2.2rem;
 }
 nav .container .nav-logo h2 span {
-  color: var(--color-danger);
+  color: var(--color-primary);
 }
 nav .container .nav-logo p {
   font-size: 1.2rem;
@@ -131,17 +124,17 @@ nav .container .nav-links a {
 }
 
 nav .container .nav-links a:hover {
-  color: var(--color-danger);
+  color: var(--color-primary);
 }
 
 nav .container .nav-links a:nth-child(1) {
-  color: var(--color-danger);
+  color: var(--color-primary);
 }
 
 /* ======== Sell Rebon Section =======*/
 body .sell-rebon {
   width: 100vw;
-  background-color: var(--color-danger);
+  background-color: var(--color-primary);
   position: absolute;
   top: 5.8rem;
   left: 0;
@@ -158,7 +151,7 @@ body .sell-rebon p {
 
 body .sell-rebon p span {
   font-weight: 400;
-  color: var(--color-black);
+  color: var(--color-secondary);
 }
 
 /* ======================= header Section ====================*/
@@ -166,7 +159,7 @@ header {
   margin-top: 0;
   width: 100vw;
   height: 90vh;
-  background-image: url(./images/extra.jpg);
+  background-image: url(./images/Header-1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
@@ -185,14 +178,14 @@ header .container {
 
 header .container h2:nth-child(1) {
   text-transform: uppercase;
-  color: var(--color-danger);
+  color: var(--color-primary);
   font-size: 2.5rem;
   font-weight: 600;
 }
 
 /* ul */
 header .container .new-underline {
-  background-color: var(--color-danger);
+  background-color: var(--color-primary);
   width: 40rem;
   height: 2.9px;
   border-radius: 1.8rem;
@@ -230,16 +223,16 @@ header .container a {
   display: block;
   padding: var(--btn-padding);
   background-color: transparent;
-  border: 4px solid var(--color-danger);
+  border: 4px solid var(--color-primary);
   font-weight: 500;
   font-size: 2rem;
   font-family: inherit;
-  color: var(--color-danger);
+  color: var(--color-primary);
   transition: var(--transition);
 }
 
 .hvr:hover {
-  background-color: var(--color-danger);
+  background-color: var(--color-primary);
   color: white;
 }
 
@@ -252,7 +245,7 @@ main .container {
 main .container .popularity {
   width: 100%;
   height: 18rem;
-  background-color: var(--color-danger);
+  background-color: var(--color-primary);
   color: var(--color-white);
   display: flex;
   justify-content: space-around;
@@ -304,7 +297,7 @@ main .container .collection .items .item p {
 }
 
 main .container .collection .item .collections-first-item p {
-  color: var(--color-danger);
+  color: var(--color-primary);
 }
 /* ========================== About Section ================= */
 /* Photo */
@@ -327,7 +320,7 @@ main .card-container .card-photos .card-photo-1 {
   width: 100%;
   z-index: -4;
   border-radius: 0 0 4rem 0;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.6);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 main .card-container .card-photos .card-photo-2 {
@@ -337,7 +330,7 @@ main .card-container .card-photos .card-photo-2 {
   right: 0;
   z-index: 4;
   border-radius: 4rem 0 0 4rem;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.6);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 main .card-container .card-info {
@@ -367,59 +360,6 @@ main .card-info a {
   margin-top: 1.2rem;
 }
 
-/* 
-main .card-container {
-  width: 100%;
-  height: 81rem;
-  position: relative;
-}
-
-main .card-photo-1 {
-  position: absolute;
-  left: 0;
-  top: 10rem;
-  width: 45%;
-  border-radius: 0 3rem 3rem 0;
-  overflow: hidden;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.6);
-}
-
-main .card-photo-2 {
-  width: 65%;
-  position: absolute;
-  right: 0;
-  top: 0;
-  border-radius: 3rem 0 0 3rem;
-  overflow: hidden;
-  z-index: 2;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.6);
-}
-
-main .card-info {
-  position: absolute;
-  top: 72%;
-  left: 50%;
-  z-index: 44;
-  color: var(--color-dark);
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  text-align: justify;
-  gap: 1rem;
-}
-
-main .card-info h2 {
-  font-size: 4rem;
-}
-
-main .card-info p {
-  width: 55rem;
-  font-size: 1.4rem;
-}
-
-main .card-info a {
-  margin-top: 1.2rem;
-} */
 /* ============================Browse Items =============================*/
 
 main .container-2 {
@@ -450,7 +390,7 @@ main .container-2 .brows-item-card {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
 }
 
 main .container-2 .brows-item-photo {
@@ -526,7 +466,7 @@ main .contact-card-info {
 main .sign-up {
   width: 100%;
   height: 18rem;
-  background-color: var(--color-danger);
+  background-color: var(--color-primary);
   color: var(--color-white);
   display: flex;
   flex-direction: column;
@@ -577,7 +517,7 @@ main .sign-up form input[type="submit"] {
 footer {
   width: 100vw;
   height: 50vh;
-  background-color: var(--color-black);
+  background-color: var(--color-secondary);
   color: var(--color-white);
   display: flex;
   flex-direction: column;
@@ -591,7 +531,7 @@ footer h2 {
 }
 
 footer h2 span {
-  color: var(--color-danger);
+  color: var(--color-primary);
 }
 
 footer p {
