--- a/style.css
+++ b/style.css
@@ -545,3 +545,7 @@ footer .socialmedia-icon {
   align-items: center;
   gap: 1.4rem;
 }
+
+footer .socialmedia-icon a {
+  color: var(--color-white);
+}
